--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,6 @@
 
 <%- include partials/header -%>
 
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to <%= userName %></p>
 
 <%- include partials/footer -%>
