--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,31 +15,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= title %></title>
+  <script src="appclient.js"></script>
   <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-  <!-- <link rel='stylesheet' href='/stylesheets/style.css' />   -->
+  <link rel='stylesheet' href='/stylesheets/style.css' />  
 </head>
 <body>
   <!-- Navigation bar -->
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm navbar-custom navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">
-      <img src="/images/logo.png" alt="logo" style="width:40px;">
+    <a class="navbar-brand" href="/">
+      <img src="/images/logoWhite.png" alt="logo" style="width:40px;">
     </a>
     
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/"><i class="fas fa-home"></i> Home </a>
+        <a class="nav-link" href="/home"> Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about"><i class="fas fa-file-contract"></i> About </a>
+        <a class="nav-link" href="/about"> About Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/projects"><i class="fas fa-tasks"></i> Projects </a>
+        <a class="nav-link" href="/projects"> Projects </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/users/show"><i class="fas fa-users"></i> Users </a>
+        <a class="nav-link" href="/services"> Services </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact"> Contact Me </a>
       </li>
     </ul>
   </nav>
