--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,17 @@
 <%- include partials/header -%>
 
+<body class="home-bg">
+<h1 class="h1-home"><b>Hi, I'm <span style="color: rgba(224,196,173);"> <%= userName %> </span></b>
+<br></h1>
+</div>
 
-<hr>
-<h1><b>Welcome <%= userName %> to the HOME Page </b></h1>
-<hr>
-<p>This is your profile using <%= title %></p>
+<div class="footer-home">
+    <p>&copy; &nbsp;COMP 229-003 Web App Development<br>Avalon Stanley - 300849734<br>Created On: June 2, 2022</p>    
+</div>
 
-<%- include partials/footer -%>
+<!-- Scripts -->
+<script src="/jquery/dist/jquery.min.js"></script>
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/javascripts/appclient.js"></script>
+</body>
+</html>
