--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,7 +7,7 @@
   <body>
 
     <!-- logo -->
-    <a class="navbar-logo" href="/about">
+    <a class="navbar-logo" href="/home">
         <img src="/images/logoBrown.png" alt="logo" style="width:40px;">
     </a>
 
