--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,9 +2,9 @@
   </html> -->
 
 
-  <footer>
-    <p>Here goes the footer.</p>    
-</footer>
+<div class="footer">
+    <p>&copy; &nbsp;COMP 229-003 Web App Development<br>Avalon Stanley - 300849734<br>Created On: June 2, 2022</p>    
+</div>
 
 <!-- Scripts -->
 <script src="/jquery/dist/jquery.min.js"></script>
