--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= title %></title>
-  <script src="appclient.js"></script>
   <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel='stylesheet' href='/stylesheets/style.css' />  
@@ -23,14 +22,14 @@
 <body>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-sm navbar-custom navbar-dark">
-    <!-- Brand/logo -->
+    <!--Logo -->
     <a class="navbar-brand" href="/">
       <img src="/images/logoWhite.png" alt="logo" style="width:40px;">
     </a>
     
     <!-- Links -->
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/home"> Home </a>
       </li>
       <li class="nav-item">
@@ -47,3 +46,4 @@
       </li>
     </ul>
   </nav>
+
