--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%- include partials/header -%>
 
-<h3>Give me a shout.</h3>
+<%- include partials/title -%>
 
 <div class="container">
   <form action="/action_page.php">
