--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,7 @@
 <%- include partials/header -%>
 
 <body class="home-bg">
-<h1 class="h1-home"><b>Hi, I'm <span style="color: rgba(224,196,173);"> <%= userName %> </span></b>
-<br></h1>
-</div>
+<h1 class="h1-home"><b>Hi, I'm <span style="color: rgba(224,196,173);"> <%= userName %> </span></b></h1>
+<br><h2 class="h2-home">I tend to see everything through the lens of possibility and progress, problems and solutions.</h2>
 
-<div class="footer-home">
-    <p>&copy; &nbsp;COMP 229-003 Web App Development<br>Avalon Stanley - 300849734<br>Created On: June 2, 2022</p>    
-</div>
-
-<!-- Scripts -->
-<script src="/jquery/dist/jquery.min.js"></script>
-<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/javascripts/appclient.js"></script>
-</body>
-</html>
+<%- include partials/footer -%>
