--- a/views/projectsServices.ejs
+++ b/views/projectsServices.ejs
@@ -2,21 +2,32 @@
 
     <%- include partials/header -%>
 
+    <%- include partials/title -%>
+
     <div id="placeholders">
        <div class="member">
-           <img src="http://i.imgur.com/OBUL7se.jpg" alt="Responsive image" />
-           <div class="name">Name
-               <br />Description</div>
+            <embed src="/images/PigsFly.pdf" width="150px" height="150px" />
+            <div class="name">Name
+                <br />Description
+            </div>
+        </div>
+       <div class="member">
+            <img src="/images/ProtectedAreasAssignment.JPG" alt="Girl in a jacket" width="150px" height="150px">
+            <div class="name">Name
+                <br />Description
+            </div>
+        </div>
+       <div class="member">
+        <img src="/images/CanadaGooseProductPage.JPG" alt="Girl in a jacket" width="150px" height="150px">
+            <div class="name">Name
+                <br />Description
+            </div>
        </div>
        <div class="member">
-           <img src="http://i.imgur.com/OBUL7se.jpg" alt="Responsive image" />
-           <div class="name">Name
-               <br />Description</div>
-       </div>
-       <div class="member">
-           <img src="http://i.imgur.com/zmPeyso.png" alt="Responsive image" />
-           <div class="name">Name
-               <br />Description</div>
+        <img src="/images/RealtorPageProject.JPG" alt="Girl in a jacket" width="150px" height="150px">
+            <div class="name">Name
+                <br />Description
+            </div>
        </div>
    </div>
 
