--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,17 +14,28 @@ a {
 .h1-landing{
   text-align: center;
   font-size: 150px;
-  letter-spacing: -13px;
+  letter-spacing: -8px;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 80px;
 }
 
 .h1-home{
   text-align: left;
-  font-size: 80px;
-  letter-spacing: -8px;
+  font-size: 60px;
+  letter-spacing: -1px;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 80px;
+  color: white;
+  padding-left: 20px;
+}
+
+.h2-home{
+  text-align: left;
+  font-size: 30px;
+  letter-spacing: -1px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 20px;
+  color: white;
 }
 
 .navbar-brand{
@@ -57,19 +68,38 @@ a {
 
 .aboutMePic{
   display: block;
-  margin-top: -80px;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
+
+}
+
+.content{
+  position: relative;
+  width: 100%;
+  height:auto;
 }
 
 .aboutMePic-brown{
   background-color: rgba(224,196,173);
-  height: 250px;
+  height: 150px;
+  width: 100%;
+  position: relative;
+}
+
+.aboutMePic{
+  z-index:1;
+  top: 20px;
+  width: 200px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .aboutMeContent{
-  margin-top: 100px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -77,6 +107,8 @@ a {
   font-weight: lighter;
   font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   font-size: 12px;
+  position: static;
+  margin-top: 13%;
 }
 
 h2, h3{
@@ -153,47 +185,25 @@ a:hover {
 
 .footer {
   margin-top: 50px;
-  margin-bottom: -auto;
-  padding: 20px 50px 2px 50px;
+  padding: 20px 25px 12px 50px;
   width: 100%;
   background-color: rgba(224,196,173);
   color: white;
   text-align: right;
   font-size: 10px;
-  position:relative;
-}
-
-.footer-home{
-  padding: 20px 50px 2px 50px;
-  width: 100%;
-  background-color: rgba(224,196,173);
-  color: white;
-  text-align: right;
-  font-size: 10px;
-  position:absolute;
-  height:60px;
-  bottom:0;
+  float: bottom;
 }
 
 .member {
-  display: inline-block;
-  width:31%;
-  vertical-align: top;
   text-align:center;
-  padding-left: 20px;
-}
-.name {
-  display: inline;
-  margin-top: 100px;
-}
-.member img {
-  width: 100%;
-  display: block;
 }
 
 #placeholders{
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-content: center;
+  gap: 15px;
+  grid-auto-flow: column;
+  margin-top: 5%;
 }
