--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,24 +1,27 @@
 
 <%- include partials/header -%>
-<div class="aboutMePic-brown">
-<img src="/images/mypic.png" alt="myPic" class="aboutMePic">
-</div>
-<div class="aboutMeContent">
-    <h2>Baker, turned Marketer, turned <b>Programmer.</b></h2>
-    <p>My name is Avalon Stanley, and I am literally <em>obsessed</em> 
-        with creative problem solving and its seemingly 
-        endless possibilities...I thrive in an environment that 
-        challenges the norm, and pushes boundaries.<br><br>Less than 
-        a year ago, I made the crazy decision to go back to school 
-        and study Software Engineering Technology in my 30's...and with 3 kids at home! 
-        But after I learned to code my first 'Hello World' 
-        application, I was immediately entranced by the unmistakeable 
-        pull and magical feeling that it gave me.<br><br>Since then, I've 
-        dived deep into learning all that I can, and put into 
-        practice much of what I've been taught. Still new, and 
-        eager to learn, I'm ready and excited for whatever challenges 
-        come my way...because through challenge is where real growth occurs!
-    </p>
-    <a href="style.css" onclick="window.open('images/AvalonStanleyResume.pdf', '_blank', 'fullscreen=yes'); return false;">My Resume</a>
+<div class="content">
+    <div class="aboutMePic-brown">
+        <div class="aboutMePic">
+            <img src="/images/mypic.png" alt="myPic" class="aboutMePic">
+        </div>
+    </div>
+    <div class="aboutMeContent">
+        <h2>Baker, turned Marketer, turned <b>Programmer.</b></h2>
+            <p>My name is Avalon Stanley, and I am literally <em>obsessed</em> 
+            with creative problem solving and its seemingly 
+            endless possibilities...I thrive in an environment that 
+            challenges the norm, and pushes boundaries.<br><br>Less than 
+            a year ago, I made the crazy decision to go back to school 
+            and study Software Engineering Technology in my 30's...and with 3 kids at home! 
+            But after I learned to code my first 'Hello World' 
+            application, I was immediately entranced by the unmistakeable 
+            pull and magical feeling that it gave me.<br><br>Since then, I've 
+            dived deep into learning all that I can, and put into 
+            practice much of what I've been taught. Still new, and 
+            eager to learn, I'm ready and excited for whatever challenges 
+            come my way...because through challenge is where real growth occurs!</p>
+        <a href="style.css" onclick="window.open('images/AvalonStanleyResume.pdf', '_blank', 'fullscreen=yes'); return false;">My Resume</a>
    </div>
+</div>
 <%- include partials/footer -%>
