--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 
-<%- include partials/header -%>
+<%- include partials/nav -%>
 <div class="content">
     <div class="aboutMePic-brown">
         <div class="aboutMePic">
