--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
-<%- include partials/header -%>
+<%- include partials/nav -%>
 
-<%- include partials/title -%>
+<%- include partials/heading -%>
 
 <div class="container">
   <form action="/action_page.php">
