--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include partials/header -%>
+<%- include partials/nav -%>
 
 <body class="home-bg">
 <h1 class="h1-home"><b>Hi, I'm <span style="color: rgba(224,196,173);"> <%= userName %> </span></b></h1>
