--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
 <%- include partials/heading -%>
 
 <div class="container">
-  <form action="/action_page.php">
+  <form action="">
       <div class="div1">
     <label for="fname">First Name</label>
     <input type="text" name="fname" name="firstname" placeholder="" required>
@@ -21,7 +21,7 @@
     <label for="message">Message</label>
     <textarea id="message" name="message" placeholder="Type your message here." style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="submit"/>
 </div>
   </form>
 
