--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,6 +7,7 @@
 </div>
 
 <!-- Scripts -->
+<script src="/javascripts/appclient.js"></script>
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/javascripts/appclient.js"></script>
