--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="aboutMeContent">
-        <h2>Baker, turned Marketer, turned <b>Programmer.</b></h2>
+        <h2>Baker, turned Marketer, turned <b>Programmer.</b></h2><br>
             <p>My name is Avalon Stanley, and I am literally <em>obsessed</em> 
             with creative problem solving and its seemingly 
             endless possibilities...I thrive in an environment that 
@@ -20,7 +20,7 @@
             dived deep into learning all that I can, and put into 
             practice much of what I've been taught. Still new, and 
             eager to learn, I'm ready and excited for whatever challenges 
-            come my way...because through challenge is where real growth occurs!</p>
+            come my way...because through challenge is where real growth occurs!</p><br>
         <a href="style.css" onclick="window.open('images/AvalonStanleyResume.pdf', '_blank', 'fullscreen=yes'); return false;">My Resume</a>
    </div>
 </div>
