--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,9 +18,52 @@
     
     <!-- Links -->
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/home"> Home </a>
+
+      <li class="nav-item">
+        <% if(title == "Home") {%>
+          <a class="nav-link active" href="/home">
+        <%} else {%>
+        <a class="nav-link" href="/home">
+        <%} %>
+        Home </a>
       </li>
+      <li class="nav-item">
+        <% if(title == "About") {%>
+          <a class="nav-link active" href="/about">
+        <%} else {%>
+        <a class="nav-link" href="/about">
+        <%} %>
+         About Me</a>
+      </li>
+
+      <li class="nav-item">
+        <% if(title == "Projects") {%>
+          <a class="nav-link active" href="/projects">
+        <%} else {%>
+        <a class="nav-link" href="/projects">
+        <%} %>
+        Projects </a>
+      </li>
+
+      <li class="nav-item">
+        <% if(title == "Services") {%>
+          <a class="nav-link active" href="/services">
+        <%} else {%>
+        <a class="nav-link" href="/services">
+        <%} %>
+        Services </a>
+      </li>
+
+      <li class="nav-item">
+        <% if(title == "Contact") {%>
+          <a class="nav-link active" href="/contact">
+        <%} else {%>
+        <a class="nav-link" href="/contact">
+        <%} %>
+        Contact Me</a>
+      </li>
+
+
       <li class="nav-item">
         <a class="nav-link" href="/about"> About Me</a>
       </li>
@@ -33,6 +76,5 @@
       <li class="nav-item">
         <a class="nav-link" href="/contact"> Contact Me </a>
       </li>
-    </ul>
   </nav>
 
