--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include partials/nav -%>
 <div id="containerDiv">
 <body class="home-bg">
-<h1 class="h1-home"><b>Hi, I'm <span style="color: rgba(224,196,173);"> <%= userName %> </span></b></h1>
+<h1 class="h1-home"><b>Hi, I'm <span style="color: rgba(224,196,173);"> Avalon </span></b></h1>
 <br><h2 class="h2-home">I tend to see everything through the lens of possibility and progress, problems and solutions.</h2>
 </div>
 <%- include partials/footer -%>
