--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,20 +5,20 @@
 <div class="container">
   <form action="">
     <div class="div1">
-    <label for="fname">First Name</label>
+    <label>First Name</label>
     <input type="text" name="fname" name="firstname" placeholder="" required>
 
-    <label for="lname">Last Name</label>
+    <label>Last Name</label>
     <input type="text" name="lname" name="lastname" placeholder="" required>
 
-    <label for="phone">Contact Number</label>
+    <label>Contact Number</label>
     <input type="text" name="phone" name="phone" placeholder="e.g. 999-999-9999">
 
-    <label for="email">Email</label>
+    <label>Email</label>
     <input type="text" name="email" name="email" placeholder="example@email.com" required>
 </div>
 <div class="div2">
-    <label for="message">Message</label>
+    <label>Message</label>
     <textarea id="message" name="message" placeholder="Type your message here." style="height:200px"></textarea>
 
     <input type="submit" value="submit"/>
